footer disappeared on smaller devices [fixed]

--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -7,3 +7,9 @@
   justify-content: flex-end;
   z-index: 5;
 }
+
+@media screen and (max-width: 545px) {
+  .footer {
+    display: none;
+  }
+}
